Front end progress update
