# resources/js/api-documentation.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  title: Genesi Block API Documentation
+  title: Genesis Block API Documentation
   description: Documentation for the Genesis developer challenge
   version: 1.0.0
 servers:
@@ -52,7 +52,7 @@ components:
         todo:
           type: array
           items:
-            $ref: '#/components/schemas/Todo'
+            $ref: "#/components/schemas/Todo"
 paths:
   /login:
     post:
@@ -105,7 +105,7 @@ paths:
                   status:
                     type: boolean
                   data:
-                    $ref: '#/components/schemas/User'
+                    $ref: "#/components/schemas/User"
   /register:
     post:
       tags:
@@ -161,7 +161,7 @@ paths:
                 properties:
                   status:
                     type: boolean
-                    
+
   /todo:
     get:
       tags:
@@ -183,7 +183,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Todo'
+                      $ref: "#/components/schemas/Todo"
     post:
       tags:
         - Todo
@@ -246,7 +246,7 @@ paths:
                   status:
                     type: boolean
                   data:
-                    $ref: '#/components/schemas/Todo'
+                    $ref: "#/components/schemas/Todo"
     put:
       tags:
         - Todo
@@ -359,7 +359,7 @@ paths:
                     type: boolean
                   message:
                     type: string
-                    
+
   /user:
     get:
       tags:
@@ -381,7 +381,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Todo'
+                      $ref: "#/components/schemas/User"
     post:
       tags:
         - User
@@ -448,7 +448,7 @@ paths:
                   status:
                     type: boolean
                   data:
-                    $ref: '#/components/schemas/Todo'
+                    $ref: "#/components/schemas/User"
     put:
       tags:
         - User
@@ -565,4 +565,3 @@ paths:
                     type: boolean
                   message:
                     type: string
- 
