# resources/src/app/@types/todo.ts
@@ -1,0 +1,10 @@
+export interface Todo {
+    id: number,
+    user_id: number,
+    title: string,
+    memo: string,
+    completed_at: string,
+    remind_at: string,
+    created_at: string,
+    updated_at: string
+}
